feat: tags on entry; make it work
